--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/decareano/Unit10_Final_Edit#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "object-assign": "^4.1.1",
     "pg": "^6.1.0",
     "supervisor": "^0.12.0"
